# sql-client

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  msql-test.sql  mysql-test.sql  mysql.cpp  mysql.h  odbcsql.cpp  odbcsql.h  program.cpp  sqlite-test.sql  sqlite.cpp  sqlite.h
sqlite/: CMakeLists.txt
